--- a/front-end/bestbuyer/src/Styles/ProductCard.css
+++ b/front-end/bestbuyer/src/Styles/ProductCard.css
@@ -11,12 +11,14 @@
     box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2);
     color: black;
     display: grid;
-    flex: 1 0 21%; 
+    /* flex: 1 0 21%;  */
+ 
     filter: drop-shadow(5px 5px 6px black);
     font-family: Helvetica , Arial , Verdana , Tahoma , sans-serif;
-    height: 400px;
-    margin: 3%;
-    width: 400px;
+    height: 350px;
+    margin: 2%;
+    width: 350px;
+
 }
 
 .product-name {
